Initial Project files

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -4,3 +4,5 @@ CommonButtonAcceptKeyHandling=TriggerClick
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=725EC5F34E5D056FA033BFB8ABA4B9E7
+CopyrightNotice=Copyright 13
+
