--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+GameDefaultMap=/Game/Maps/StartupMap.StartupMap
+EditorStartupMap=/Game/Maps/StartupMap.StartupMap
 
 [/Script/Engine.RendererSettings]
 r.AllowStaticLighting=False
@@ -92,3 +93,6 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+
+[CoreRedirects]
++ClassRedirects=(OldName="/Script/TopDown_RPG_GAS.AuraCharacter",NewName="/Script/TopDown_RPG_GAS.AuraCharacterBase")
