--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -96,3 +96,6 @@ ManualIPAddress=
 
 
 
+
+[CoreRedirects]
++PropertyRedirects=(OldName="/Script/TopDown_RPG_GAS.AuraCharacterBase.InitialPrimaryAttributesEffect",NewName="/Script/TopDown_RPG_GAS.AuraCharacterBase.DefaultPrimaryAttributesEffect")
