Aura Asset Manager

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -79,6 +79,7 @@ FontDPI=72
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_Blank",NewGameName="/Script/TopDown_RPG_GAS")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/TopDown_RPG_GAS")
+AssetManagerClassName=/Script/TopDown_RPG_GAS.AuraAssetManager
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
@@ -99,3 +100,4 @@ ManualIPAddress=
 
 [CoreRedirects]
 +PropertyRedirects=(OldName="/Script/TopDown_RPG_GAS.AuraCharacterBase.InitialPrimaryAttributesEffect",NewName="/Script/TopDown_RPG_GAS.AuraCharacterBase.DefaultPrimaryAttributesEffect")
+
