Aura Ability System Globals

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -6,3 +6,5 @@ CommonButtonAcceptKeyHandling=TriggerClick
 ProjectID=725EC5F34E5D056FA033BFB8ABA4B9E7
 CopyrightNotice=Copyright 13
 
+[/Script/GameplayAbilities.AbilitySystemGlobals]
++AbilitySystemGlobalsClassName="/Script/Aura.AuraAbilitySystemGlobals"
