--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -7,4 +7,5 @@ ProjectID=725EC5F34E5D056FA033BFB8ABA4B9E7
 CopyrightNotice=Copyright 13
 
 [/Script/GameplayAbilities.AbilitySystemGlobals]
-+AbilitySystemGlobalsClassName="/Script/Aura.AuraAbilitySystemGlobals"
+AbilitySystemGlobalsClassName=/Script/TopDown_RPG_GAS.AuraAbilitySystemGlobals
+
