AI and Effect Actors

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -100,6 +100,7 @@ ManualIPAddress=
 
 [CoreRedirects]
 +PropertyRedirects=(OldName="/Script/TopDown_RPG_GAS.AuraCharacterBase.InitialPrimaryAttributesEffect",NewName="/Script/TopDown_RPG_GAS.AuraCharacterBase.DefaultPrimaryAttributesEffect")
++PropertyRedirects=(OldName="/Script/TopDown_RPG_GAS.AuraEffectActor.bDestroyOnEffectRemoval",NewName="/Script/TopDown_RPG_GAS.AuraEffectActor.bDestroyOnEffectApplication")
 
 [/Script/Engine.CollisionProfile]
 -Profiles=(Name="NoCollision",CollisionEnabled=NoCollision,ObjectTypeName="WorldStatic",CustomResponses=((Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore)),HelpMessage="No collision",bCanModify=False)
