Gameplay Cue Notify Actor

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -8,4 +8,4 @@ CopyrightNotice=Copyright 13
 
 [/Script/GameplayAbilities.AbilitySystemGlobals]
 AbilitySystemGlobalsClassName=/Script/TopDown_RPG_GAS.AuraAbilitySystemGlobals
-
+/Game/Blueprints/AbilitySystem/GameplayCue=/Game/Blueprints/AbilitySystem/GameplayCue
