--- a/TopDown_RPG_GAS.uproject
+++ b/TopDown_RPG_GAS.uproject
@@ -29,6 +29,14 @@
 		{
 			"Name": "MotionWarping",
 			"Enabled": true
+		},
+		{
+			"Name": "ModelViewViewModel",
+			"Enabled": true
+		},
+		{
+			"Name": "SlateModelViewViewModel",
+			"Enabled": true
 		}
 	]
 }
