--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,7 +3,7 @@ net.MaxRPCPerNetUpdate=10
 
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Maps/StartupMap.StartupMap
-EditorStartupMap=/Game/Maps/StartupMap.StartupMap
+EditorStartupMap=/Game/Maps/LoadMenu.LoadMenu
 
 [/Script/Engine.RendererSettings]
 r.AllowStaticLighting=False
